docs: split README.md for aipublisher/aidiscovery separation
Remove discovery mode documentation from aipublisher README since that
functionality now lives in the aidiscovery project. Update command line
reference to match current AiPublisherCommand.java parameters.

Key changes:
- Remove --discover and --cost-profile options (moved to aidiscovery)
- Add --type option for content type selection
- Add --goal option for tutorials/guides
- Update project structure (remove discovery/, add gap/)
- Change output extension from .md to .txt (JSPWiki)
- Add Related Projects section linking to aidiscovery

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>